fix: try fix enum